# YATSIM

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CellElement.py  GameGrid.py  LICENSE  README.md  Train.py  client.py  commands.json  manage.py  phase_1.md  pylintrc  pyproject.toml  server.py  test.py  test_1.py  test_2.py  test_3.py  test_4.py  visualizer.py  visualizer2.py
doot-doot/: .eslintrc.json  package.json
doot-doot/public/: index.html
doot-doot/src/: App.jsx  index.jsx
doot-doot/src/components/: AddRemoveTrainOp.jsx  CellOps.jsx  CloneOp.jsx  Header.jsx  PlaceOp.jsx  RotateOp.jsx  SwitchOp.jsx
doot-doot/src/pages/: CreateRoom.jsx  Dashboard.jsx  Login.jsx  (+3 more)
src/lib/: cell_element.py  game_grid.py  train.py
src/yatsim/: __init__.py  cell_element.py  connection.py  game_grid.py  interfaces.py  room.py  room_manager.py  roomm.py  simulation.py  train.py  user.py  utils.py
src/yatsim-lib/: __init__.py  connection.py  game_grid.py  room.py  train.py  utils.py
yatsim/: asgi.py  consumer.py  routing.py  settings.py  simulation.py  urls.py  websocket.py
yatsim/templates/: base.html
yatsim/yatsim/: settings.py  urls.py  wsgi.py
yatsim_dashboard/: admin.py  apps.py  communication.py  forms.py  models.py  serializers.py  tests.py  views.py
yatsim_dashboard/migrations/: 0001_initial.py  0002_alter_room_guests_cell.py  0003_train_wagon.py  0004_alter_wagon_options_train_room_id_wagon_sequence_id.py  0005_alter_wagon_options_alter_cell_direction.py  0006_alter_train_source.py
yatsim_user/: apps.py  serializers.py  views.py
(+31 files in other folders)
